# mlcmirea

./: .gitignore  README.md  environment.yml  pyproject.toml
mlcmirea/: notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  notebook_4.ipynb  notebook_5.ipynb  notebook_6.ipynb  notebook_7.ipynb
mlcmirea/data/: extremely_complex_data.npy
mlcmirea/modules/: models.py  preprocessing.py  visuals.py
part_1/: empty.py
part_2/checkers/: __init__.py  module_1.py
part_2/module_1/: __init__.py  notebook_1.ipynb  notebook_2.ipynb
part_2/module_2/: __init__.py  notebook_1.ipynb  notebook_2.ipynb
