[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["part_1", "part_2"]

[project]
name = "mlcmirea"
version = "0.1.0"
requires-python = "~=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
