[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["mlcmirea"]

[project]
name = "mlcmirea"
version = "0.1.0"
requires-python = "~=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
